--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body,
   transform: translateX(-190%);
 }
 
-#t2 :target #p1,
+#t2:target #p1,
 #t3:target #p1 {
   background: #000;
 }
@@ -98,4 +98,49 @@ ul {
 ul .icon {
   margin: 30px 0;
   transition: all 0.5 ease !important;
+}
+.title ,.hint{
+  display: block;
+}
+.hint{
+  font-size: 23px;
+  line-height: 2;
+}
+.title{
+  font-size: 38px;
+}
+.hint a{
+  line-height: 2;
+  color: yellow;
+  transition: all 250ms ease-out;
+}
+.hint :hover{
+  color: #fff;
+}
+.page .icon{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10%;
+  left: 0;
+  width: 270px;
+  height: 170px;
+  margin: auto;
+  text-align: center;
+  font-size: 80px;
+  line-height: 1.3;
+  transform: translateX(360%);
+  transition: all 0.5s cubic-bezier(025,1,.5,1.25);
+
+}
+.page#p1 .icon{
+  height: 420px;
+  transform: translateX(10%)!important;
+
+}
+#t2:target #p2 .icon
+,#t3:target #p3 .icon{
+  transform: translateX(0);
+  transition-delay: 1s;
+   
 }
